# SoundHoleCore

./: .gitignore  .gitmodules  README.md  SoundHoleCore.podspec
projects/android-studio/: build.gradle  fetch-dependencies.sh  settings.gradle
projects/android-studio/app/: build.gradle
projects/android-studio/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
projects/android-studio/gradle/wrapper/: gradle-wrapper.properties
projects/android-studio/libsoundholecore/: build.gradle  fetch-spotify.sh
projects/android-studio/libsoundholecore/src/main/cpp/: CMakeLists.txt  SoundHoleCore_android.cpp  _unused.cpp
projects/xcode/: Podfile  system_dependencies.txt
projects/xcode/SoundHoleCore.xcodeproj/: project.pbxproj
projects/xcode/SoundHoleCore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/SoundHoleCore.xcworkspace/: contents.xcworkspacedata
projects/xcode/configurations/: global.json
src/: soundhole.hpp
src/soundhole/: common.hpp  external.hpp  soundhole.cpp  soundhole.hpp
src/soundhole/database/: MediaDatabase.cpp  MediaDatabase.hpp  MediaDatabaseSQL.cpp  MediaDatabaseSQL.hpp  MediaDatabaseSQLOperations.cpp  MediaDatabaseSQLOperations.hpp  MediaDatabaseSQLTransformations.cpp  MediaDatabaseSQLTransformations.hpp  SQLOrder.cpp  SQLOrder.hpp  SQLOrderBy.cpp  SQLOrderBy.hpp  SQLiteTransaction.cpp  SQLiteTransaction.hpp
src/soundhole/jni/: SoundHole.java
src/soundhole/jni/android/: MediaPlayerEventHandler.java  Utils.java
src/soundhole/jnicpp/: NativeCallback_jni.cpp  NativeCallback_jni.hpp  NativeFunction_jni.cpp  NativeFunction_jni.hpp  SoundHole_jni.cpp  SoundHole_jni.hpp  common.hpp
src/soundhole/jnicpp/android/: AudioManager_jni.cpp  AudioManager_jni.hpp  MediaPlayer_jni.cpp  MediaPlayer_jni.hpp  Utils_jni.cpp  Utils_jni.hpp
src/soundhole/media/: Album.cpp  Album.hpp  Artist.cpp  Artist.hpp  AuthedProvider.hpp  AuthedProviderIdentityStore.hpp  AuthedProviderIdentityStore.impl.hpp  ItemsPage.cpp  ItemsPage.hpp  MediaItem.cpp  MediaItem.hpp  MediaMatcher.cpp  MediaMatcher.hpp  MediaPlaybackProvider.cpp  MediaPlaybackProvider.hpp  MediaProvider.cpp  MediaProvider.hpp  MediaProviderStash.cpp  MediaProviderStash.hpp  NamedProvider.hpp  OmniArtist.cpp  OmniArtist.hpp  OmniTrack.cpp  OmniTrack.hpp  PlaybackHistoryItem.cpp  PlaybackHistoryItem.hpp  PlayerItem.cpp  PlayerItem.hpp  Playlist.cpp  Playlist.hpp  QueueItem.cpp  QueueItem.hpp  Scrobble.cpp  Scrobble.hpp  Scrobbler.cpp  Scrobbler.hpp  ScrobblerStash.hpp  ShuffledTrackCollection.cpp  ShuffledTrackCollection.hpp  StorageProvider.hpp  (+10 more)
src/soundhole/metacall/: Metacall.cpp  Metacall.hpp  build.sh  clean.sh
src/soundhole/metacall/js/: asd.js  package.json
src/soundhole/metacall/node/: index.js  package-lock.json  package.json
src/soundhole/metacall/py/: main.py
src/soundhole/playback/: MediaControls.hpp  PlaybackOrganizer.cpp  PlaybackOrganizer.hpp  PlaybackQueue.cpp  PlaybackQueue.hpp  Player.cpp  Player.hpp  PlayerHistoryManager.cpp  PlayerHistoryManager.hpp  Player_objc.hpp  Player_objc.mm  Player_objc_private.hpp  ScrobbleManager.cpp  ScrobbleManager.hpp  StreamPlaybackProvider.cpp  StreamPlaybackProvider.hpp  StreamPlayer.cpp  StreamPlayer.hpp  StreamPlayerEventHandler_iOS.hpp  StreamPlayerEventHandler_iOS.mm  StreamPlayer_android.cpp  StreamPlayer_iOS.mm  SystemMediaControls.cpp  SystemMediaControls.hpp  SystemMediaControls_iOS.h  SystemMediaControls_iOS.mm
src/soundhole/providers/: BandcampProvider.cpp  BandcampProvider.hpp  MediaProvider.cpp  MediaProvider.hpp  YoutubeProvider.cpp  YoutubeProvider.hpp
src/soundhole/providers/bandcamp/: BandcampMediaProvider.cpp  BandcampMediaProvider.hpp  BandcampPlaybackProvider.cpp  BandcampPlaybackProvider.hpp  BandcampProvider.cpp  BandcampProvider.hpp
src/soundhole/providers/lastfm/: LastFMMediaProvider.cpp  LastFMMediaProvider.hpp
src/soundhole/providers/musicbrainz/: MusicBrainzMediaProvider.cpp  MusicBrainzMediaProvider.hpp
src/soundhole/providers/soundhole/: SoundHoleMediaProvider.cpp  SoundHoleMediaProvider.hpp  SoundHoleMediaProvider_iOS.mm  SoundHoleProvider.cpp  SoundHoleProvider.hpp
src/soundhole/providers/spotify/: SpotifyMediaProvider.cpp  SpotifyMediaProvider.hpp  SpotifyPlaybackProvider.cpp  SpotifyPlaybackProvider.hpp  SpotifyProvider.cpp  SpotifyProvider.hpp
src/soundhole/providers/youtube/: YoutubeMediaProvider.cpp  YoutubeMediaProvider.hpp  YoutubePlaybackProvider.cpp  YoutubePlaybackProvider.hpp  YoutubeProvider.cpp  YoutubeProvider.hpp
src/soundhole/scripts/: Scripts.cpp  Scripts.hpp  build-quick.sh  build-release.sh  build.sh
src/soundhole/scripts/js/: .babelrc  .gitignore  index.js  package-lock.json  package.json  tsconfig.json
src/soundhole/scripts/py/: build.sh  clean.sh  requirements.txt
src/soundhole/scrobble/: Scrobbler.hpp
src/soundhole/scrobble/lastfm/: LastFMScrobbler.cpp  LastFMScrobbler.hpp
src/soundhole/storage/: StorageProvider.cpp  StorageProvider.hpp
src/soundhole/storage/googleDrive/: GoogleDriveStorageProvider.cpp  GoogleDriveStorageProvider.hpp
src/soundhole/storage/googledrive/: GoogleDriveStorageProvider.cpp  GoogleDriveStorageProvider.hpp  GoogleDriveStorageProvider_iOS.mm
src/soundhole/utils/: AsyncQueue.cpp  AsyncQueue.hpp  Base64.cpp  Base64.hpp  HttpClient.cpp  HttpClient.hpp  HttpClient_objc.mm  OAuthError.cpp  OAuthError.hpp  OAuthSession.cpp  OAuthSession.hpp  OAuthSessionManager.cpp  OAuthSessionManager.hpp  OAuthSession_android.cpp  OAuthSession_iOS.mm  SecureStore.cpp  SecureStore.hpp  SecureStore_apple.mm  SoundHoleError.cpp  SoundHoleError.hpp  Utils.cpp  Utils.hpp  Utils_apple.mm  Utils_objc.mm
src/soundhole/utils/android/: AndroidUtils.cpp  AndroidUtils.hpp
src/soundhole/utils/ios/: SHProgressView_iOS.h  SHProgressView_iOS.hpp  SHProgressView_iOS.mm  (+8 more)
src/test/: SoundHoleCoreTest.cpp  SoundHoleCoreTest.hpp  main.cpp
src/test/desktop/: main.cpp
src/test/iOS/: AppDelegate.h  AppDelegate.m  ViewController.m  ViewController.mm  main.m
tools/: fetch_android_dependencies.sh  fetch_header_dependencies.sh  fetch_shared_dependencies.sh
(+203 files in other folders)
